@@ -16,10 +16,13 @@
 #define ZEO_ERR_SINGULARMAT  "matrix is singular"
 #define ZEO_ERR_NONSO3       "matrix is not orthonormal"
 
+#define ZEO_ERR_AXIS_INVALID "invalid axis identifier : %d"
+#define ZEO_ERR_AXIS_INVNAME "invalid axis name : %s"
+#define ZEO_ERR_DIR_INV      "invalid direction identifier : %d"
+
 #define ZEO_ERR_RGB          "invalid size of RGB specification, strlen(%s)=%d"
 
 #define ZEO_ERR_TEXTURE_INVALID_COORD_ID "%d: invalid identifier of a coordinate specified."
-#define ZEO_WARN_TEXTURE_UNKNOWN_TYPE "unknown texture type: %s"
 
 #define ZEO_ERR_INVINDEX     "invalid index specified"
 
@@ -51,36 +54,36 @@
 #define ZEO_ERR_PLY_UNKNOWNPRP  "unknown property: %s"
 #define ZEO_ERR_PLY_UNSUPPORTED "unsupported description"
 
-#define ZEO_ERR_DAE_UNSUPPORTED "DAE file not supported"
+#define ZEO_ERR_DAE_UNSUPPORTED         "DAE file not supported"
 #define ZEO_ERR_DAE_ACCESSOR_UNASSIGNED "accessor unassigned to source %s"
-#define ZEO_ERR_DAE_ARRSIZMIS   "inconsistent size of array %d/%d"      
-#define ZEO_ERR_DAE_STRIDEMIS   "inconsistent stride %d/%d"
-#define ZEO_ERR_DAE_URI_EMPTY   "empty URI specified"
-#define ZEO_ERR_DAE_URI_INVALID "invalid URI: %s"
-#define ZEO_ERR_DAE_UNKNOWN_SRC "unknown source %s"
-#define ZEO_ERR_DAE_INVALID_SRC "invalid type of source"
-#define ZEO_ERR_DAE_VERT_UNASSIGNED "vertices unassigned"
-#define ZEO_ERR_DAE_IDENTMIS    "identifiers mismatch %s / %s"
-#define ZEO_ERR_DAE_EMPTYNODE   "empty node specified"
-#define ZEO_ERR_DAE_SCENE_UNDEF "visual_scene undefined"
-#define ZEO_ERR_DAE_NOT_COLLADA "This is not a COLLADA file"
-#define ZEO_ERR_DAE_NO_GEOMETRY "no geometries contained"
-#define ZEO_ERR_DAE_PRIM_UNSUPPORTED "non-triangle face, not supported"
-#define ZEO_ERR_DAE_PRIM_INVALID "invalid DAE file %s"
-#define ZEO_ERR_DAE_FAILCONV     "failed to create a polyhedron from a DAE file %s"
+#define ZEO_ERR_DAE_ARRSIZMIS           "inconsistent size of array %d/%d"      
+#define ZEO_ERR_DAE_STRIDEMIS           "inconsistent stride %d/%d"
+#define ZEO_ERR_DAE_URI_EMPTY           "empty URI specified"
+#define ZEO_ERR_DAE_URI_INVALID         "invalid URI: %s"
+#define ZEO_ERR_DAE_UNKNOWN_SRC         "unknown source %s"
+#define ZEO_ERR_DAE_INVALID_SRC         "invalid type of source"
+#define ZEO_ERR_DAE_VERT_UNASSIGNED     "vertices unassigned"
+#define ZEO_ERR_DAE_IDENTMIS            "identifiers mismatch %s / %s"
+#define ZEO_ERR_DAE_EMPTYNODE           "empty node specified"
+#define ZEO_ERR_DAE_SCENE_UNDEF         "visual_scene undefined"
+#define ZEO_ERR_DAE_NOT_COLLADA         "This is not a COLLADA file"
+#define ZEO_ERR_DAE_NO_GEOMETRY         "no geometries contained"
+#define ZEO_ERR_DAE_PRIM_UNSUPPORTED    "non-triangle face, not supported"
+#define ZEO_ERR_DAE_PRIM_INVALID        "invalid DAE file %s"
+#define ZEO_ERR_DAE_FAILCONV            "failed to create a polyhedron from a DAE file %s"
 
-#define ZEO_ERR_NURBS_INVDIM "invalid dimension specified for NURBS, or lack of control points"
+#define ZEO_ERR_NURBS_INVDIM      "invalid dimension specified for NURBS, or lack of control points"
 #define ZEO_ERR_NURBS_SIZMIS      "size mismatch of NURBS surfaces"
 #define ZEO_ERR_NURBS_KNOTALREADY "knot already allocated"
 #define ZEO_ERR_NURBS_CPALREADY   "control point already allocated"
 #define ZEO_ERR_NURBS_INVCP       "invalid index of control point specified"
 
-#define ZEO_ERR_SHAPE_INVALID "invalid shape type assigned."
-#define ZEO_ERR_SHAPE_ZEROC   "zero-distance centers specified"
-#define ZEO_ERR_SHAPE_MANY   "too many shapes specified"
-#define ZEO_ERR_SHAPE_INV    "invalid description for the shape"
-#define ZEO_ERR_SHAPE_UNNAME "unnamed shape exists"
-#define ZEO_ERR_SHAPE_UNDEF  "undefined shape %s referred"
+#define ZEO_ERR_SHAPE_INVALID         "invalid shape type assigned."
+#define ZEO_ERR_SHAPE_ZEROC           "zero-distance centers specified"
+#define ZEO_ERR_SHAPE_INV             "invalid description for the shape"
+#define ZEO_ERR_SHAPE_UNNAME          "unnamed shape exists"
+#define ZEO_ERR_SHAPE_UNDEF           "undefined shape %s referred"
+#define ZEO_ERR_SHAPE_MIRROR_INV_AXIS "cannot mirror about axis: %s"
 
 #define ZEO_ERR_EMPTYSET     "empty set assigned"
 
@@ -92,7 +95,7 @@
 
 #define ZEO_ERR_TERRA_INVSIZ "grid size unspecified"
 #define ZEO_ERR_TERRA_INVRSL "too fine (or negative) grid resolution"
-#define ZEO_ERR_TERRA_OOREG   "out of region (%g,%g): cannot estimate ground height"
+#define ZEO_ERR_TERRA_OOREG  "out of region (%g,%g): cannot estimate ground height"
 #define ZEO_ERR_TERRA_OORAN  "grid out of range"
 
 #define ZEO_ERR_MAP_UNSPEC   "map type unspecified."
@@ -102,6 +105,7 @@
 /* warning messages */
 
 #define ZEO_WARN_TEXTURE_COORD_UNMATCH "%d: unmatched identifier of a coordinate"
+#define ZEO_WARN_TEXTURE_UNKNOWN_TYPE  "unknown texture type: %s"
 #define ZEO_WARN_TEXTURE_EMPTY         "empty set of coordinates assigned for a texture."
 
 #define ZEO_WARN_PH_EMPTY         "empty set of vertices assigned for a polyhedron."
@@ -119,6 +123,7 @@
 #define ZEO_WARN_SHAPE_UNKNOWNTEXTURE "%s: unknown name of a texture data."
 #define ZEO_WARN_SHAPE_OVRRDN_PH "shape type overridden by polyhedron"
 #define ZEO_WARN_SHAPE_UNKNOWNFORMAT "%s: unknown format of a shape."
+#define ZEO_WARN_SHAPE_MIRROR_INV_TYPE "cannot specify type for mirrored shape : %s. destroyed"
 
 #define ZEO_WARN_MSHAPE_EMPTY     "empty shapes assigned."
 
