@@ -1,3 +1,5 @@
+2023. 2. 2. Modified zAxisStr, zAxisFromStr, and zDirStr. [zeo_misc]
+2023. 2. 2. Debugged zShape3DMirror to check if axis is valid. [zeo_shape3d]
 2023. 1.21. Modified zRGBFromZTK to accept hexadecimal value. [zeo_render_color]
 2023. 1.11. Debugged zShape3DToPH (thanks to Kenta Imanishi). [zeo_shape3d]
 2022.12.19. Added zAxisInvalid in the enum type zAxis (thanks to Daishi Kaneta). [zeo_misc, zeo_vec3d_tree]
